@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,9 +17,11 @@ package ghidra.app.plugin.core.processors;
 
 import java.awt.BorderLayout;
 import java.awt.Dimension;
+import java.awt.datatransfer.Clipboard;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.io.*;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -30,12 +32,16 @@ import javax.swing.JPanel;
 import docking.ActionContext;
 import docking.action.DockingAction;
 import docking.action.MenuData;
+import docking.dnd.GClipboard;
+import docking.dnd.StringTransferable;
+import docking.widgets.OptionDialog;
 import docking.widgets.label.GDLabel;
 import ghidra.app.CorePluginPackage;
 import ghidra.app.context.*;
 import ghidra.app.plugin.PluginCategoryNames;
 import ghidra.app.plugin.ProgramPlugin;
 import ghidra.app.services.GoToService;
+import ghidra.framework.Application;
 import ghidra.framework.plugintool.PluginInfo;
 import ghidra.framework.plugintool.PluginTool;
 import ghidra.framework.plugintool.util.PluginStatus;
@@ -60,6 +66,7 @@ import ghidra.util.*;
 public class ShowInstructionInfoPlugin extends ProgramPlugin {
 
 	private static final String CURRENT_INSTRUCTION_PREPEND_STRING = "Current Instruction: ";
+	private static final String CURRENT_DATA_PREPEND_STRING = "Current Datatype: ";
 	private static final String CURRENT_FUNCTION_APPEND_STRING =
 		" (double-click to go to function entry)";
 
@@ -70,8 +77,8 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 	private List<InstructionInfoProvider> disconnectedProviders = new ArrayList<>();
 	private DockingAction showProcessorManualAction;
 
-	private JLabel instructionLabel;
-	private JPanel instructionPanel;
+	private JLabel codeUnitLabel;
+	private JPanel codeUnitPanel;
 	private JLabel functionLabel;
 	private JPanel functionPanel;
 	private JLabel addressLabel;
@@ -82,7 +89,7 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 
 	public ShowInstructionInfoPlugin(PluginTool tool) {
 
-		super(tool, true, false);
+		super(tool);
 
 		createStatusPanels();
 		createActions();
@@ -94,14 +101,14 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 	}
 
 	private void createStatusPanels() {
-		instructionPanel = new JPanel(new BorderLayout());
-		instructionLabel = new GDLabel("                         ");
-		instructionPanel.setPreferredSize(
-			new Dimension(200, instructionLabel.getPreferredSize().height));
-		instructionLabel.setToolTipText(CURRENT_INSTRUCTION_PREPEND_STRING);
-		instructionPanel.add(instructionLabel);
-		instructionPanel.setName("Current Instruction");
-		tool.addStatusComponent(instructionPanel, true, false);
+		codeUnitPanel = new JPanel(new BorderLayout());
+		codeUnitLabel = new GDLabel("                         ");
+		codeUnitPanel.setPreferredSize(
+			new Dimension(200, codeUnitLabel.getPreferredSize().height));
+		codeUnitLabel.setToolTipText(CURRENT_INSTRUCTION_PREPEND_STRING);
+		codeUnitPanel.add(codeUnitLabel);
+		codeUnitPanel.setName("Current Instruction");
+		tool.addStatusComponent(codeUnitPanel, true, false);
 
 		functionPanel = new JPanel(new BorderLayout());
 		functionLabel = new GDLabel("                   ");
@@ -185,7 +192,7 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 	private File writeWrapperFile(URL fileURL) throws IOException {
 		File f;
 		if (manualWrapperFiles.size() < MAX_MANUAL_WRAPPER_FILE_COUNT) {
-			f = File.createTempFile("pdfView", ".html");
+			f = Application.createTempFile("pdfView", ".html");
 			f.deleteOnExit();
 		}
 		else {
@@ -197,8 +204,8 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 			pw.println("<html lang=\"en\">");
 			pw.println("<head><meta charset=\"utf-8\"></head>");
 			pw.println("<body style=\"height:100vh;\">");
-			String path = fileURL.getPath() + "#" + fileURL.getRef();
-			pw.println("<embed src=\"" + path + "\" width=\"100%\" height=\"100%\">");
+			pw.println(
+				"<embed src=\"" + fileURL.toExternalForm() + "\" width=\"100%\" height=\"100%\">");
 			pw.println("</body>");
 			pw.println("</html>");
 		}
@@ -216,18 +223,30 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 		String missingDescription = entry.getMissingManualDescription();
 		if (filename == null || !new File(filename).exists()) {
 			String message = buildMissingManualMessage(language, filename, missingDescription);
-			Msg.showInfo(this, null, "Missing Processor Manual", message);
+
+			int choice =
+				OptionDialog.showOptionNoCancelDialog(null, "Missing Processor Manual", message,
+					"Copy \uFF06 Close", // & in Java is for mnemonics; use unicode value
+					"Close",
+					OptionDialog.INFORMATION_MESSAGE);
+			if (choice == OptionDialog.OPTION_ONE) {
+				Clipboard systemClipboard = GClipboard.getSystemClipboard();
+				String copyText = "Missing file: " + filename + "\nDetails: " + missingDescription;
+				StringTransferable transferable = new StringTransferable(copyText);
+				systemClipboard.setContents(transferable, null);
+			}
+
 			return null;
 		}
 
+		URI uri = new File(filename).toURI();
 		String pageNumber = entry.getPageNumber();
-		String fixedFilename = filename.replace(File.separatorChar, '/');
-		if (!fixedFilename.startsWith("/")) {
-			// fix absolute windows paths which start with drive letter
-			fixedFilename = "/" + fixedFilename;
+		if (pageNumber != null) {
+			// include manual page as query string (respected by PDF readers)
+			String pageRef = "#page=" + pageNumber;
+			uri = uri.resolve(pageRef);
 		}
-		return new URL(
-			"file://" + fixedFilename + (pageNumber == null ? "" : "#page=" + pageNumber));
+		return uri.toURL();
 	}
 
 	ManualEntry locateManualEntry(ProgramActionContext context, Language language) {
@@ -298,7 +317,7 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 			provider.dispose();
 		}
 		disconnectedProviders.clear();
-		tool.removeStatusComponent(instructionPanel);
+		tool.removeStatusComponent(codeUnitPanel);
 		tool.removeStatusComponent(addressPanel);
 		tool.removeStatusComponent(functionPanel);
 		super.dispose();
@@ -307,7 +326,7 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 	/**
 	 * Remove this InstructionProvider from list of managed dialogs
 	 *
-	 * @param provider
+	 * @param provider the provider to remove
 	 */
 	public void remove(InstructionInfoProvider provider) {
 		if (provider == connectedProvider) {
@@ -320,12 +339,12 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 	}
 
 	JLabel getInstructionLabel() {
-		return instructionLabel;
+		return codeUnitLabel;
 	}
 
 	/**
-	 * Subclass should override this method if it is interested in
-	 * program location events.
+	 * Subclass should override this method if it is interested in program location events.
+	 * 
 	 * @param loc location could be null
 	 */
 	@Override
@@ -353,19 +372,27 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 			functionLabel.setToolTipText("");
 		}
 
-		/// code added //
-		Instruction instr = getInstructionForCurrentProgram();
-		if (instr == null) {
-			instructionLabel.setText("");
-			instructionLabel.setToolTipText("");
+		// update instruction/Data field
+		CodeUnit codeUnit = getCodeUnitForCurrentProgram();
+		if (codeUnit == null) {
+			codeUnitLabel.setText("");
+			codeUnitLabel.setToolTipText("");
 			return;
 		}
-
-		String representation = instr.toString();
-		instructionLabel.setText(" " + representation + " ");
-		instructionLabel.setToolTipText(CURRENT_INSTRUCTION_PREPEND_STRING + representation);
-
-		// end code added ///
+		if (codeUnit instanceof Instruction) {
+			String representation = codeUnit.toString();
+			codeUnitLabel.setText(" " + representation + " ");
+			codeUnitLabel.setToolTipText(CURRENT_INSTRUCTION_PREPEND_STRING + representation);
+		}
+		else {
+			Data data = (Data) codeUnit;
+			String dataTypeName = data.getDataType().getName();
+			int size = data.getLength();
+			String displayText = dataTypeName + "  (" + size + ")";
+			String toolTipText = CURRENT_DATA_PREPEND_STRING + dataTypeName + "  Size = " + size;
+			codeUnitLabel.setText(displayText);
+			codeUnitLabel.setToolTipText(toolTipText);
+		}
 	}
 
 	@Override
@@ -386,8 +413,8 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 
 	@Override
 	protected void programDeactivated(Program program) {
-		instructionLabel.setText("");
-		instructionLabel.setToolTipText("");
+		codeUnitLabel.setText("");
+		codeUnitLabel.setToolTipText("");
 		if (connectedProvider != null) {
 			connectedProvider.setProgram(null);
 		}
@@ -404,14 +431,14 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 		return listing.getInstructionContaining(addr);
 	}
 
-	private Instruction getInstructionForCurrentProgram() {
+	private CodeUnit getCodeUnitForCurrentProgram() {
 		Address addr = currentLocation.getAddress();
 		if (addr == null) {
 			return null;
 		}
 
 		Listing listing = currentProgram.getListing();
-		return listing.getInstructionContaining(addr);
+		return listing.getCodeUnitContaining(addr);
 	}
 
 	void goToSurroundingFunction() {
@@ -435,7 +462,7 @@ public class ShowInstructionInfoPlugin extends ProgramPlugin {
 		}
 		else if (provider != connectedProvider && isDynamic) {
 			if (connectedProvider != null) {
-				connectedProvider.setNonDynamic();
+				connectedProvider.setDynamic(false);
 			}
 			disconnectedProviders.remove(provider);
 			connectedProvider = provider;
@@ -456,7 +483,7 @@ class ShowInfoAction extends ListingContextAction {
 
 		this.plugin = plugin;
 
-		setPopupMenuData(new MenuData(new String[] { "Instruction Info..." }, null, "Disassembly"));
+		setPopupMenuData(new MenuData(new String[] { "Instruction Info" }, null, "Disassembly"));
 
 	}
 
@@ -478,8 +505,8 @@ class ShowProcessorManualAction extends ProgramContextAction {
 		this.plugin = plugin;
 
 		setMenuBarData(
-			new MenuData(new String[] { "Tools", "Processor Manual..." }, null, "Disassembly"));
-		setPopupMenuData(new MenuData(new String[] { "Processor Manual..." }, null, "Disassembly"));
+			new MenuData(new String[] { "Tools", "Processor Manual" }, null, "Disassembly"));
+		setPopupMenuData(new MenuData(new String[] { "Processor Manual" }, null, "Disassembly"));
 
 		this.setEnabled(true);
 	}
