@@ -1,6 +1,5 @@
 /* ###
  * IP: GHIDRA
- * REVIEWED: YES
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +16,18 @@
 package ghidra.app.plugin.debug.dbtable;
 
 import db.ByteField;
-import db.Record;
+import db.DBRecord;
 
 public class ByteColumnAdapter extends AbstractColumnAdapter {
+
+	ByteColumnAdapter(String columnName, int column) {
+		super(columnName, column);
+	}
+
+	@Override
+	public int getColumnPreferredWidth() {
+		return 100;
+	}
 
 	@Override
 	Class<?> getValueClass() {
@@ -27,13 +35,17 @@ public class ByteColumnAdapter extends AbstractColumnAdapter {
 	}
 
 	@Override
-	Object getKeyValue(Record rec) {
-		return new Byte(((ByteField) rec.getKeyField()).getByteValue());
+	Object getKeyValue(DBRecord rec) {
+		return Byte.valueOf(((ByteField) rec.getKeyField()).getByteValue());
 	}
 
 	@Override
-	Object getValue(Record rec, int col) {
-		return new Byte(rec.getByteValue(col));
+	Object getValue(DBRecord rec, int dbColumn) {
+		return Byte.valueOf(rec.getByteValue(dbColumn));
 	}
 
+	@Override
+	public LongRenderer getColumnRenderer() {
+		return longRenderer;
+	}
 }
