@@ -1,6 +1,5 @@
 /* ###
  * IP: GHIDRA
- * REVIEWED: YES
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +15,19 @@
  */
 package ghidra.app.plugin.debug.dbtable;
 
+import db.DBRecord;
 import db.IntField;
-import db.Record;
 
 public class IntegerColumnAdapter extends AbstractColumnAdapter {
+
+	IntegerColumnAdapter(String columnName, int column) {
+		super(columnName, column);
+	}
+
+	@Override
+	public int getColumnPreferredWidth() {
+		return 200;
+	}
 
 	@Override
 	Class<?> getValueClass() {
@@ -27,13 +35,17 @@ public class IntegerColumnAdapter extends AbstractColumnAdapter {
 	}
 
 	@Override
-	Object getKeyValue(Record rec) {
-		return new Integer(((IntField) rec.getKeyField()).getIntValue());
+	Object getKeyValue(DBRecord rec) {
+		return Integer.valueOf(((IntField) rec.getKeyField()).getIntValue());
 	}
 
 	@Override
-	Object getValue(Record rec, int col) {
-		return new Integer(rec.getIntValue(col));
+	Object getValue(DBRecord rec, int col) {
+		return Integer.valueOf(rec.getIntValue(col));
 	}
 
+	@Override
+	public LongRenderer getColumnRenderer() {
+		return longRenderer;
+	}
 }
