@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,6 +15,10 @@
  */
 package ghidra.app.util.viewer.field;
 
+import java.net.*;
+
+import docking.widgets.fieldpanel.field.AttributedString;
+import generic.theme.GThemeDefaults.Colors.Messages;
 import ghidra.app.nav.Navigatable;
 import ghidra.app.services.ProgramManager;
 import ghidra.framework.plugintool.ServiceProvider;
@@ -23,22 +27,18 @@ import ghidra.program.model.listing.Program;
 import ghidra.util.BrowserLoader;
 import ghidra.util.Msg;
 
-import java.awt.Color;
-import java.net.MalformedURLException;
-import java.net.URL;
-
-import docking.widgets.fieldpanel.field.AttributedString;
-
 /**
- * An annotated string handler that allows handles annotations that begin with 
+ * An annotated string handler that allows handles annotations that begin with
  * {@link #SUPPORTED_ANNOTATIONS}.  This class expects one or two strings following the annotation.
  * The first string will be treated as a Java {@link URL} and the optional second string will
- * be treated as display text.  If there is not display text, then the URL will be 
+ * be treated as display text.  If there is not display text, then the URL will be
  * displayed.
  */
 public class URLAnnotatedStringHandler implements AnnotatedStringHandler {
-	private static final String INVALID_SYMBOL_TEXT = "@url annotation must have a URL string "
-		+ "optionally followed by a display string";
+
+	private static final String INVALID_SYMBOL_TEXT =
+		"@url annotation must have a URL string optionally followed by a display string";
+
 	private static final String[] SUPPORTED_ANNOTATIONS = { "url", "hyperlink", "href", "link" };
 
 	@Override
@@ -54,7 +54,7 @@ public class URLAnnotatedStringHandler implements AnnotatedStringHandler {
 
 		if (url == null) {
 			return new AttributedString("Invalid URL annotations - not a URL: " + text[1],
-				Color.RED, prototypeString.getFontMetrics(0), false, Color.RED);
+				Messages.ERROR, prototypeString.getFontMetrics(0), false, Messages.ERROR);
 		}
 
 		String displayText = url.toExternalForm();
@@ -77,17 +77,15 @@ public class URLAnnotatedStringHandler implements AnnotatedStringHandler {
 	}
 
 	private URL getURLForString(String urlString) {
-		URL url = null;
 		try {
-			url = new URL(urlString);
+			return new URI(urlString).toURL();
 		}
-		catch (MalformedURLException exc) {
-			// we return null
+		catch (MalformedURLException | URISyntaxException e) {
+			return null;
 		}
-
-		return url;
 	}
 
+	@Override
 	public boolean handleMouseClick(String[] annotationParts, Navigatable navigatable,
 			ServiceProvider serviceProvider) {
 		String urlString = annotationParts[1];
@@ -101,8 +99,8 @@ public class URLAnnotatedStringHandler implements AnnotatedStringHandler {
 			return true;
 		}
 
-		Msg.showError(this, null, "Invalid URL", "Unable to create a Java URL " +
-			"object from string: " + urlString);
+		Msg.showError(this, null, "Invalid URL",
+			"Unable to create a Java URL object from string: " + urlString);
 
 		return false;
 	}
@@ -115,6 +113,11 @@ public class URLAnnotatedStringHandler implements AnnotatedStringHandler {
 	@Override
 	public String getPrototypeString() {
 		return "{@url http://www.example.com}";
+	}
+
+	@Override
+	public String getPrototypeString(String dislplayText) {
+		return "{@url " + dislplayText.trim() + "}";
 	}
 
 }
