@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,12 +15,10 @@
  */
 package ghidra.formats.gfilesystem.factory;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
-import ghidra.app.util.bin.*;
+import ghidra.app.util.bin.ByteProvider;
 import ghidra.formats.gfilesystem.*;
 import ghidra.formats.gfilesystem.annotations.FileSystemInfo;
 import ghidra.util.Msg;
@@ -34,13 +32,11 @@ import ghidra.util.task.TaskMonitor;
  * <p>
  * Auto-discovers all {@link GFileSystem} instances in the classpath that have a
  * {@link FileSystemInfo} annotation.
- * <p>
  */
 public class FileSystemFactoryMgr {
 
 	/**
-	 * <p>
-	 * @return The single global {@link FileSystemFactoryMgr} instance.
+	 * {@return The single global {@link FileSystemFactoryMgr} instance.}
 	 */
 	public static FileSystemFactoryMgr getInstance() {
 		return Singleton.instance;
@@ -67,7 +63,7 @@ public class FileSystemFactoryMgr {
 		for (Class<? extends GFileSystem> fsClass : ClassSearcher.getClasses(GFileSystem.class)) {
 			addFactory(fsClass);
 		}
-		Collections.sort(sortedFactories, FileSystemInfoRec.BY_PRIORITY);
+		sortedFactories.sort(FileSystemInfoRec.BY_PRIORITY);
 	}
 
 	private void addFactory(Class<? extends GFileSystem> fsClass) {
@@ -79,9 +75,9 @@ public class FileSystemFactoryMgr {
 		if (fsByType.containsKey(fsir.getType())) {
 			FileSystemInfoRec prevFSI = fsByType.get(fsir.getType());
 			Msg.error(this,
-				"GFileSystem type '" + fsir.getType() + "' registered more than one time: " +
-					fsClass.getName() + ", " + prevFSI.getFSClass().getName() +
-					", ommitting second instance.");
+				"GFileSystem type '%s' registered more than one time: %s, %s, ommitting second instance."
+						.formatted(fsir.getType(), fsClass.getName(),
+							prevFSI.getFSClass().getName()));
 			return;
 		}
 
@@ -89,13 +85,11 @@ public class FileSystemFactoryMgr {
 			// don't register any filesystem that uses this factory
 			return;
 		}
-		if (fsir.getFactory() instanceof GFileSystemProbeBytesOnly) {
-			GFileSystemProbeBytesOnly pbo = (GFileSystemProbeBytesOnly) fsir.getFactory();
+		if (fsir.getFactory() instanceof GFileSystemProbeBytesOnly pbo) {
 			if (pbo.getBytesRequired() > GFileSystemProbeBytesOnly.MAX_BYTESREQUIRED) {
 				Msg.error(this,
-					"GFileSystemProbeBytesOnly for " + fsClass.getName() +
-						" specifies too large value for bytes_required: " + pbo.getBytesRequired() +
-						", skipping this probe.");
+					"GFileSystemProbeBytesOnly for %s specifies too large value for bytes_required: %s, skipping this probe."
+							.formatted(fsClass.getName(), pbo.getBytesRequired()));
 			}
 			else {
 				largestBytesRequired = Math.max(largestBytesRequired, pbo.getBytesRequired());
@@ -118,7 +112,7 @@ public class FileSystemFactoryMgr {
 				.stream()
 				.map(fsType -> fsByType.get(fsType).getDescription())
 				.sorted(String::compareToIgnoreCase)
-				.collect(Collectors.toList());
+				.toList();
 		//@formatter:on
 	}
 
@@ -135,56 +129,59 @@ public class FileSystemFactoryMgr {
 
 	/**
 	 * Creates a new {@link GFileSystem} instance when the filesystem type is already
-	 * known.
-	 * <p>
+	 * known, consuming the specified ByteProvider.
 	 *
 	 * @param fsType filesystem type string, ie. "file", "zip".
-	 * @param containerFSRL {@link FSRL} of the containing file.
-	 * @param containerFile {@link File} the containing file.
+	 * @param byteProvider {@link ByteProvider}, will be owned by the new file system
 	 * @param fsService reference to the {@link FileSystemService} instance.
 	 * @param monitor {@link TaskMonitor} to use for canceling and updating progress.
 	 * @return new {@link GFileSystem} instance.
 	 * @throws IOException if error when opening the filesystem or unknown fsType.
 	 * @throws CancelledException if the user canceled the operation.
 	 */
-	public GFileSystem mountFileSystem(String fsType, FSRL containerFSRL, File containerFile,
+	public GFileSystem mountFileSystem(String fsType, ByteProvider byteProvider,
 			FileSystemService fsService, TaskMonitor monitor)
 			throws IOException, CancelledException {
 		FileSystemInfoRec fsir = fsByType.get(fsType);
 		if (fsir == null) {
+			FSUtilities.uncheckedClose(byteProvider, null);
 			throw new IOException("Unknown file system type " + fsType);
 		}
 
-		GFileSystem result = mountUsingFactory(fsir, containerFSRL, containerFile, null,
-			containerFSRL.makeNested(fsType), fsService, monitor);
+		GFileSystem result = mountUsingFactory(fsir, byteProvider,
+			byteProvider.getFSRL().makeNested(fsType), fsService, monitor);
 
 		return result;
 	}
 
-	private GFileSystem mountUsingFactory(FileSystemInfoRec fsir, FSRL containerFSRL,
-			File containerFile, ByteProvider byteProvider, FSRLRoot targetFSRL,
-			FileSystemService fsService, TaskMonitor monitor)
+	private GFileSystem mountUsingFactory(FileSystemInfoRec fsir, ByteProvider byteProvider,
+			FSRLRoot targetFSRL, FileSystemService fsService, TaskMonitor monitor)
 			throws IOException, CancelledException {
 
 		GFileSystem result = null;
 		boolean bpTaken = false;
 		try {
-			if (fsir.getFactory() instanceof GFileSystemFactoryFull) {
-				byteProvider =
-					(byteProvider == null) ? makeBP(containerFile, containerFSRL) : byteProvider;
+			if (fsir.getFactory() instanceof GFileSystemFactoryByteProvider bpFactory) {
 				bpTaken = true;
-				result = ((GFileSystemFactoryFull<?>) fsir.getFactory()).create(containerFSRL,
-					targetFSRL, byteProvider, containerFile, fsService, monitor);
-			}
-			else if (fsir.getFactory() instanceof GFileSystemFactoryWithFile) {
-				result = ((GFileSystemFactoryWithFile<?>) fsir.getFactory()).create(containerFSRL,
-					targetFSRL, containerFile, fsService, monitor);
+				result = bpFactory.create(targetFSRL, byteProvider, fsService, monitor);
 			}
 			// add additional GFileSystemFactoryXYZ support blocks here
 		}
+		catch (IOException | CancelledException e) {
+			if (e instanceof FileSystemFactoryDependencyException) {
+				// don't need stacktrace
+				Msg.warn(this, "File system dependency error: %s (%s)".formatted(e.getMessage(),
+					fsir.getType()));
+			}
+			else {
+				Msg.warn(this, "Error during fs factory create: %s, %s".formatted(fsir.getType(),
+					fsir.getFSClass()), e);
+			}
+			throw e;
+		}
 		finally {
 			if (byteProvider != null && !bpTaken) {
-				byteProvider.close();
+				FSUtilities.uncheckedClose(byteProvider, null);
 			}
 		}
 
@@ -193,47 +190,40 @@ public class FileSystemFactoryMgr {
 
 	/**
 	 * Returns true if the specified file contains a supported {@link GFileSystem}.
-	 * <p>
-	 * @param containerFSRL {@link FSRL} of the containing file.
-	 * @param containerFile {@link File} the containing file.
+	 * 
+	 * @param byteProvider container {@link ByteProvider}
 	 * @param fsService reference to the {@link FileSystemService} instance.
 	 * @param monitor {@link TaskMonitor} to use for canceling and updating progress.
 	 * @return {@code true} if the file seems to contain a filesystem, {@code false} if it does not.
 	 * @throws IOException if error when accessing the containing file
 	 * @throws CancelledException if the user canceled the operation
 	 */
-	public boolean test(FSRL containerFSRL, File containerFile, FileSystemService fsService,
-			TaskMonitor monitor) throws IOException, CancelledException {
+	public boolean test(ByteProvider byteProvider, FileSystemService fsService, TaskMonitor monitor)
+			throws IOException, CancelledException {
 
 		int pboByteCount = Math.min(
-			(int) Math.min(containerFile.length(), GFileSystemProbeBytesOnly.MAX_BYTESREQUIRED),
+			(int) Math.min(byteProvider.length(), GFileSystemProbeBytesOnly.MAX_BYTESREQUIRED),
 			largestBytesRequired);
 
-		try (ByteProvider bp = new RandomAccessByteProvider(containerFile, containerFSRL)) {
-			byte[] startBytes = bp.readBytes(0, pboByteCount);
-			for (FileSystemInfoRec fsir : sortedFactories) {
-				if (fsir.getFactory() instanceof GFileSystemProbeBytesOnly) {
-					GFileSystemProbeBytesOnly factoryProbe =
-						(GFileSystemProbeBytesOnly) fsir.getFactory();
-					if (factoryProbe.getBytesRequired() <= startBytes.length) {
-						if (factoryProbe.probeStartBytes(containerFSRL, startBytes)) {
-							return true;
-						}
-					}
-				}
-				if (fsir.getFactory() instanceof GFileSystemProbeWithFile) {
-					GFileSystemProbeWithFile factoryProbe =
-						(GFileSystemProbeWithFile) fsir.getFactory();
-					if (factoryProbe.probe(containerFSRL, containerFile, fsService, monitor)) {
+		FSRL containerFSRL = byteProvider.getFSRL();
+		byte[] startBytes = byteProvider.readBytes(0, pboByteCount);
+		for (FileSystemInfoRec fsir : sortedFactories) {
+			try {
+				if (fsir.getFactory() instanceof GFileSystemProbeBytesOnly factoryProbe) {
+					if (factoryProbe.getBytesRequired() <= startBytes.length &&
+						factoryProbe.probeStartBytes(containerFSRL, startBytes)) {
 						return true;
 					}
 				}
-				if (fsir.getFactory() instanceof GFileSystemProbeFull) {
-					GFileSystemProbeFull factoryProbe = (GFileSystemProbeFull) fsir.getFactory();
-					if (factoryProbe.probe(containerFSRL, bp, containerFile, fsService, monitor)) {
+				if (fsir.getFactory() instanceof GFileSystemProbeByteProvider factoryProbe) {
+					if (factoryProbe.probe(byteProvider, fsService, monitor)) {
 						return true;
 					}
 				}
+			}
+			catch (IOException e) {
+				Msg.trace(this, "File system probe error for " + fsir.getDescription() + " with " +
+					containerFSRL, e);
 			}
 		}
 		return false;
@@ -242,10 +232,8 @@ public class FileSystemFactoryMgr {
 	/**
 	 * Probes the specified file for a supported {@link GFileSystem} implementation, and
 	 * if found, creates a new filesystem instance.
-	 * <p>
 	 *
-	 * @param containerFSRL {@link FSRL} of the containing file.
-	 * @param containerFile {@link File} the containing file.
+	 * @param byteProvider container {@link ByteProvider}, will be owned by the new filesystem
 	 * @param fsService reference to the {@link FileSystemService} instance.
 	 * @param conflictResolver {@link FileSystemProbeConflictResolver conflict resolver} to
 	 * use when more than one {@link GFileSystem} implementation can handle the specified
@@ -255,26 +243,20 @@ public class FileSystemFactoryMgr {
 	 * @throws IOException if error accessing the containing file
 	 * @throws CancelledException if the user cancels the operation
 	 */
-	public GFileSystem probe(FSRL containerFSRL, File containerFile, FileSystemService fsService,
+	public GFileSystem probe(ByteProvider byteProvider, FileSystemService fsService,
 			FileSystemProbeConflictResolver conflictResolver, TaskMonitor monitor)
 			throws IOException, CancelledException {
 
-		return probe(containerFSRL, containerFile, fsService, conflictResolver,
-			FileSystemInfo.PRIORITY_LOWEST, monitor);
-	}
-
-	private ByteProvider makeBP(File containerFile, FSRL containerFSRL) throws IOException {
-		return new SynchronizedByteProvider(
-			new RandomAccessByteProvider(containerFile, containerFSRL));
+		return probe(byteProvider, fsService, conflictResolver, FileSystemInfo.PRIORITY_LOWEST,
+			monitor);
 	}
 
 	/**
 	 * Probes the specified file for a supported {@link GFileSystem} implementation, and
-	 * if found, creates a new filesystem instance.
-	 * <p>
-	 *
-	 * @param containerFSRL {@link FSRL} of the containing file.
-	 * @param containerFile {@link File} the containing file.
+	 * if found, creates a new filesystem instance.  The ByteProvider is owned by the new
+	 * file system.
+	 * 
+	 * @param byteProvider container {@link ByteProvider}, will be owned by the new filesystem
 	 * @param fsService reference to the {@link FileSystemService} instance.
 	 * @param conflictResolver {@link FileSystemProbeConflictResolver conflict resolver} to
 	 * use when more than one {@link GFileSystem} implementation can handle the specified
@@ -287,50 +269,46 @@ public class FileSystemFactoryMgr {
 	 * @throws IOException if error accessing the containing file
 	 * @throws CancelledException if the user cancels the operation
 	 */
-	public GFileSystem probe(FSRL containerFSRL, File containerFile, FileSystemService fsService,
+	public GFileSystem probe(ByteProvider byteProvider, FileSystemService fsService,
 			FileSystemProbeConflictResolver conflictResolver, int priorityFilter,
 			TaskMonitor monitor) throws IOException, CancelledException {
 
-		conflictResolver = (conflictResolver == null) ? FileSystemProbeConflictResolver.CHOOSEFIRST
+		conflictResolver = (conflictResolver == null)
+				? FileSystemProbeConflictResolver.CHOOSEFIRST
 				: conflictResolver;
 
-		ByteProvider probeBP = makeBP(containerFile, containerFSRL);
+		FSRL containerFSRL = byteProvider.getFSRL();
 		try {
 			int pboByteCount = Math.min(
-				(int) Math.min(containerFile.length(), GFileSystemProbeBytesOnly.MAX_BYTESREQUIRED),
+				(int) Math.min(byteProvider.length(), GFileSystemProbeBytesOnly.MAX_BYTESREQUIRED),
 				largestBytesRequired);
 
-			byte[] startBytes = probeBP.readBytes(0, pboByteCount);
+			byte[] startBytes = byteProvider.readBytes(0, pboByteCount);
 			List<FileSystemInfoRec> probeMatches = new ArrayList<>();
 			for (FileSystemInfoRec fsir : sortedFactories) {
-				if (fsir.getPriority() < priorityFilter) {
-					break;
-				}
-				if (fsir.getFactory() instanceof GFileSystemProbeBytesOnly) {
-					GFileSystemProbeBytesOnly factoryProbe =
-						(GFileSystemProbeBytesOnly) fsir.getFactory();
-					if (factoryProbe.getBytesRequired() <= startBytes.length) {
-						if (factoryProbe.probeStartBytes(containerFSRL, startBytes)) {
+				try {
+					if (fsir.getPriority() < priorityFilter) {
+						break;
+					}
+					if (fsir.getFactory() instanceof GFileSystemProbeBytesOnly factoryProbe) {
+						if (factoryProbe.getBytesRequired() <= startBytes.length) {
+							if (factoryProbe.probeStartBytes(containerFSRL, startBytes)) {
+								probeMatches.add(fsir);
+								continue;
+							}
+						}
+					}
+					if (fsir.getFactory() instanceof GFileSystemProbeByteProvider factoryProbe) {
+						if (factoryProbe.probe(byteProvider, fsService, monitor)) {
 							probeMatches.add(fsir);
 							continue;
 						}
 					}
 				}
-				if (fsir.getFactory() instanceof GFileSystemProbeWithFile) {
-					GFileSystemProbeWithFile factoryProbe =
-						(GFileSystemProbeWithFile) fsir.getFactory();
-					if (factoryProbe.probe(containerFSRL, containerFile, fsService, monitor)) {
-						probeMatches.add(fsir);
-						continue;
-					}
-				}
-				if (fsir.getFactory() instanceof GFileSystemProbeFull) {
-					GFileSystemProbeFull factoryProbe = (GFileSystemProbeFull) fsir.getFactory();
-					if (factoryProbe.probe(containerFSRL, probeBP, containerFile, fsService,
-						monitor)) {
-						probeMatches.add(fsir);
-						continue;
-					}
+				catch (IOException e) {
+					Msg.trace(this, "File system probe error for %s with %s"
+							.formatted(fsir.getDescription(), containerFSRL),
+						e);
 				}
 			}
 
@@ -340,17 +318,18 @@ public class FileSystemFactoryMgr {
 				return null;
 			}
 
-			ByteProvider mountBP = probeBP;
-			probeBP = null;
-			GFileSystem fs = mountUsingFactory(fsir, containerFSRL, containerFile, mountBP,
+			// After this point, the byteProvider will be closed by the new filesystem,
+			// or by the factory method if there is an error during mount
+			ByteProvider mountBP = byteProvider;
+			byteProvider = null;
+
+			GFileSystem fs = mountUsingFactory(fsir, mountBP,
 				containerFSRL.makeNested(fsir.getType()), fsService, monitor);
 			monitor.setMessage("Found file system " + fs.getDescription());
 			return fs;
 		}
 		finally {
-			if (probeBP != null) {
-				probeBP.close();
-			}
+			FSUtilities.uncheckedClose(byteProvider, null);
 		}
 
 	}
