@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,27 +17,38 @@ package ghidra.app.plugin.core.byteviewer;
 
 import static ghidra.GhidraOptions.*;
 
-import java.awt.*;
+import java.awt.Font;
+import java.awt.event.InputEvent;
+import java.awt.event.KeyEvent;
 import java.math.BigInteger;
 import java.util.*;
-import java.util.List;
 
 import javax.swing.JComponent;
+import javax.swing.KeyStroke;
 
+import docking.*;
+import docking.action.*;
+import docking.action.builder.ActionBuilder;
+import docking.action.builder.ToggleActionBuilder;
+import docking.actions.PopupActionProvider;
+import docking.widgets.fieldpanel.support.ViewerPosition;
+import generic.theme.*;
 import ghidra.GhidraOptions;
 import ghidra.GhidraOptions.CURSOR_MOUSE_BUTTON_NAMES;
 import ghidra.app.plugin.core.format.*;
 import ghidra.app.services.MarkerService;
+import ghidra.app.util.viewer.listingpanel.AddressSetDisplayListener;
 import ghidra.framework.options.*;
 import ghidra.framework.plugintool.ComponentProviderAdapter;
 import ghidra.framework.plugintool.PluginTool;
-import ghidra.util.*;
+import ghidra.util.HelpLocation;
+import ghidra.util.Msg;
+import ghidra.util.charset.CharsetInfo;
 import ghidra.util.classfinder.ClassSearcher;
 import ghidra.util.task.SwingUpdateManager;
-import resources.ResourceManager;
 
 public abstract class ByteViewerComponentProvider extends ComponentProviderAdapter
-		implements OptionsChangeListener {
+		implements OptionsChangeListener, PopupActionProvider {
 
 	protected static final String BLOCK_NUM = "Block Num";
 	protected static final String BLOCK_OFFSET = "Block Offset";
@@ -46,68 +57,77 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	protected static final String X_OFFSET = "X Offset";
 	protected static final String Y_OFFSET = "Y Offset";
 	private static final String VIEW_NAMES = "View Names";
-	private static final String HEX_VIEW_GROUPSIZE = "Hex view groupsize";
-	private static final String BYTES_PER_LINE_NAME = "Bytes Per Line";
-	private static final String OFFSET_NAME = "Offset";
+	private static final String VIEW_WIDTHS = "View_Widths";
 	static final int DEFAULT_NUMBER_OF_CHARS = 8;
 
-	static final Font DEFAULT_FONT = new Font("Monospaced", Font.PLAIN, 12);
-	static final int DEFAULT_BYTES_PER_LINE = 16;
-	static final Color DEFAULT_MISSING_VALUE_COLOR = Color.blue;
-	static final Color DEFAULT_EDIT_COLOR = Color.red;
-	static final Color DEFAULT_CURRENT_CURSOR_COLOR = Color.magenta.brighter();
-	static final Color DEFAULT_CURSOR_COLOR = Color.black;
-	static final Color DEFAULT_NONFOCUS_CURSOR_COLOR = Color.darkGray;
-	private static final Color DEFAULT_CURSOR_LINE_COLOR = GhidraOptions.DEFAULT_CURSOR_LINE_COLOR;
+	static final String DEFAULT_FONT_ID = "font.byteviewer";
+	static final Font DEFAULT_FONT = Gui.getFont(DEFAULT_FONT_ID);
+	static final String HEADER_FONT_ID = "font.byteviewer.header";
+	static final Font HEADER_FONT = Gui.getFont(HEADER_FONT_ID);
 
-	static final String DEFAULT_INDEX_NAME = "Addresses";
+	//@formatter:off
+	static final GColor FG_COLOR = new GColor("color.fg");
+	static final GColor BG_COLOR = new GColor("color.bg.byteviewer");
+	static final GColor SEPARATOR_COLOR = new GColor("color.fg.byteviewer.separator");
+	
+	static final GColor BOUNDARY_CROSSING_COLOR = new GColor("color.fg.byteviewer.boundary.crossing");
+	static final GColor EDITED_TEXT_COLOR = new GColor("color.fg.byteviewer.changed");
+	static final GColor CURSOR_COLOR_FOCUSED_EDIT = new GColor("color.cursor.byteviewer.focused.edit");
+	static final GColor CURSOR_COLOR_UNFOCUSED_EDIT = new GColor("color.cursor.byteviewer.unfocused.edit");
+	static final GColor CURSOR_COLOR_FOCUSED_NON_EDIT = new GColor("color.cursor.byteviewer.focused.non.edit");
+	static final GColor CURSOR_COLOR_UNFOCUSED_NON_EDIT = new GColor("color.cursor.byteviewer.unfocused.non.edit");
 
-	static final String OPTION_EDIT_COLOR = "Edit Cursor Color";
-	static final String OPTION_SEPARATOR_COLOR = "Block Separator Color";
-	static final String OPTION_CURRENT_VIEW_CURSOR_COLOR = "Current View Cursor Color";
-	static final String OPTION_CURSOR_COLOR = "Cursor Color";
+	static final GColor CURRENT_LINE_COLOR = GhidraOptions.DEFAULT_CURSOR_LINE_COLOR;
+	static final GColor HIGHLIGHT_COLOR = new GColor("color.bg.byteviewer.highlight");
+	static final GColor HIGHLIGHT_MIDDLE_MOUSE_COLOR = new GColor("color.bg.byteviewer.highlight.middle.mouse");
+	//@formatter:on
+
+	static final String INDEX_COLUMN_NAME = "Addresses";
+
+	static final String SEPARATOR_COLOR_OPTION_NAME = "Block Separator Color";
+	static final String EDIT_TEXT_COLOR_OPTION_NAME = "Edited Text Color";
+	static final String CURSOR_FOCUSED_COLOR_OPTION_NAME = "Cursor Color Focused";
+	static final String CURSOR_UNFOCUSED_COLOR_OPTION_NAME = "Cursor Color Unfocused";
+	static final String CURSOR_FOCUSED_EDIT_COLOR_OPTION_NAME = "Cursor Color Focused Edit";
+	static final String CURSOR_UNFOCUSED_EDIT_COLOR_OPTION_NAME = "Cursor Color Unfocused Edit";
+
 	static final String OPTION_FONT = "Font";
-	static final String OPTION_NONFOCUS_CURSOR_COLOR = "Non-Focus Cursor Color";
 
 	private static final String DEFAULT_VIEW = "Hex";
-	private static final String OPTION_CURRENT_LINE_COLOR =
-		GhidraOptions.HIGHLIGHT_CURSOR_LINE_COLOR_OPTION_NAME;
 	private static final String OPTION_HIGHLIGHT_CURSOR_LINE =
 		GhidraOptions.HIGHLIGHT_CURSOR_LINE_OPTION_NAME;
+	private static final String OPTION_HIGHLIGHT_MIDDLE_MOUSE_NAME = "Middle Mouse Color";
 
 	protected ByteViewerPanel panel;
 
-	private Color editColor;
-	private Color currentCursorColor;
-	private Color defaultCursorColor;
-
-	private int bytesPerLine;
-	private int offset;
-	private int hexGroupSize = 1;
+	private ByteViewerConfigOptions configOptions = new ByteViewerConfigOptions();
 
 	protected Map<String, ByteViewerComponent> viewMap = new HashMap<>();
 
-	private ToggleEditAction editModeAction;
-	protected OptionsAction setOptionsAction;
+	protected ToggleDockingAction editModeAction;
 
 	protected ProgramByteBlockSet blockSet;
 
-	protected final ByteViewerPlugin plugin;
+	protected final AbstractByteViewerPlugin<?> plugin;
 
 	protected SwingUpdateManager updateManager;
 
 	private Map<String, Class<? extends DataFormatModel>> dataFormatModelClassMap;
+	private DockingAction shiftLeftAction;
+	private DockingAction shiftRightAction;
+	private DockingAction optionsAction;
 
-	protected ByteViewerComponentProvider(PluginTool tool, ByteViewerPlugin plugin, String name,
-			Class<?> contextType) {
+	protected ByteViewerComponentProvider(PluginTool tool, AbstractByteViewerPlugin<?> plugin,
+			String name, Class<?> contextType) {
 		super(tool, name, plugin.getName(), contextType);
 		this.plugin = plugin;
+		registerAdjustableFontId(DEFAULT_FONT_ID);
 
 		initializedDataFormatModelClassMap();
 
-		panel = new ByteViewerPanel(this);
-		bytesPerLine = DEFAULT_BYTES_PER_LINE;
-		setIcon(ResourceManager.loadImage("images/binaryData.gif"));
+		panel = newByteViewerPanel();
+		setIcon(new GIcon("icon.plugin.byteviewer.provider"));
+
 		setOptions();
 
 		createActions();
@@ -116,6 +136,11 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 		addView(DEFAULT_VIEW);
 		setWindowMenuGroup("Byte Viewer");
+		tool.addPopupActionProvider(this);
+	}
+
+	protected ByteViewerPanel newByteViewerPanel() {
+		return new ByteViewerPanel(this);
 	}
 
 	private void initializedDataFormatModelClassMap() {
@@ -126,12 +151,75 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 		}
 	}
 
-	private void createActions() {
-		editModeAction = new ToggleEditAction(this, plugin);
-		setOptionsAction = new OptionsAction(this, plugin);
+	ToggleDockingAction getEditModeAction() {
+		// for junit
+		return editModeAction;
+	}
 
-		addLocalAction(editModeAction);
-		addLocalAction(setOptionsAction);
+	DockingAction getShiftLeftAction() {
+		// for junit
+		return shiftLeftAction;
+	}
+
+	DockingAction getShiftRightAction() {
+		// for junit
+		return shiftRightAction;
+	}
+
+	DockingAction getOptionsAction() {
+		// for junit
+		return optionsAction;
+	}
+
+	private void createActions() {
+		editModeAction =
+			new ToggleActionBuilder("Enable/Disable Byteviewer Editing", plugin.getName())
+					.selected(false)
+					.description("Enable/Disable editing of bytes in Byte Viewer panels.")
+					.toolBarIcon(new GIcon("icon.base.edit.bytes"))
+					.toolBarGroup("Byteviewer")
+					.keyBinding(KeyStroke.getKeyStroke(KeyEvent.VK_E,
+						DockingUtils.CONTROL_KEY_MODIFIER_MASK | InputEvent.ALT_DOWN_MASK))
+					.enabledWhen(ac -> blockSet != null && blockSet.isValid())
+					.onAction(ac -> setEditMode(editModeAction.isSelected()))
+					.buildAndInstallLocal(this);
+
+		optionsAction = new ActionBuilder("Byte Viewer Options", plugin.getName())
+				.description("Set Byte Viewer Options")
+				.toolBarIcon(new GIcon("icon.plugin.byteviewer.options"))
+				.toolBarGroup("ZSettings")
+				.enabledWhen(ac -> blockSet != null && blockSet.isValid())
+				.onAction(ac -> tool.showDialog(
+					new ByteViewerOptionsDialog(ByteViewerComponentProvider.this),
+					ByteViewerComponentProvider.this))
+				.buildAndInstallLocal(this);
+
+		shiftLeftAction = new ActionBuilder("Shift Alignment Offset Left", plugin.getName())
+				.description("Shift Alignment Offset Left")
+				.popupMenuGroup("ByteOffsetShift")
+				.popupMenuPath("Shift Bytes Left")
+				.keyBinding("ctrl-comma")
+				.enabledWhen(ac -> blockSet != null && blockSet.isValid())
+				.onAction(ac -> adjustOffset(-1))
+				.buildAndInstallLocal(this);
+
+		shiftRightAction = new ActionBuilder("Shift Alignment Offset Right", plugin.getName())
+				.description("Shift Alignment Offset Right")
+				.popupMenuGroup("ByteOffsetShift")
+				.popupMenuPath("Shift Bytes Right")
+				.keyBinding("ctrl-period")
+				.enabledWhen(ac -> blockSet != null && blockSet.isValid())
+				.onAction(ac -> adjustOffset(+1))
+				.buildAndInstallLocal(this);
+	}
+
+	@Override
+	public List<DockingActionIf> getPopupActions(Tool t, ActionContext context) {
+		if (context instanceof ByteViewerActionContext bvContext &&
+			bvContext.getComponentProvider() == this) {
+			return bvContext.getActiveColumn().getPopupActions(t, bvContext);
+		}
+		return null;
 	}
 
 	@Override
@@ -150,8 +238,8 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	/**
 	 * Notification that an option changed.
+	 *
 	 * @param options options object containing the property that changed
-	 * @param group
 	 * @param optionName name of option that changed
 	 * @param oldValue old value of the option
 	 * @param newValue new value of the option
@@ -159,45 +247,19 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	@Override
 	public void optionsChanged(ToolOptions options, String optionName, Object oldValue,
 			Object newValue) {
-		if (options.getName().equals("ByteViewer")) {
 
-			if (optionName.equals(OPTION_CURRENT_VIEW_CURSOR_COLOR)) {
-				panel.setCurrentCursorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_CURSOR_COLOR)) {
-				panel.setCursorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_CURRENT_LINE_COLOR)) {
-				panel.setCurrentCursorLineColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_EDIT_COLOR)) {
-				panel.setEditColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_SEPARATOR_COLOR)) {
-				panel.setSeparatorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_NONFOCUS_CURSOR_COLOR)) {
-				panel.setNonFocusCursorColor((Color) newValue);
-			}
-			else if (optionName.equals(OPTION_FONT)) {
-				setFont(SystemUtilities.adjustForFontSizeOverride((Font) newValue));
-			}
-		}
-		else if (options.getName().equals(CATEGORY_BROWSER_FIELDS)) {
+		if (options.getName().equals(CATEGORY_BROWSER_FIELDS)) {
 			if (optionName.equals(CURSOR_HIGHLIGHT_BUTTON_NAME)) {
 				CURSOR_MOUSE_BUTTON_NAMES mouseButton = (CURSOR_MOUSE_BUTTON_NAMES) newValue;
 				panel.setHighlightButton(mouseButton.getMouseEventID());
 			}
-			else if (optionName.equals(HIGHLIGHT_COLOR_NAME)) {
-				panel.setMouseButtonHighlightColor((Color) newValue);
+		}
+		else if (options.getName().equals("ByteViewer")) {
+			if (optionName.equals(OPTION_HIGHLIGHT_CURSOR_LINE)) {
+				panel.setHighlightCurrentLineEnabled((Boolean) newValue);
 			}
 		}
-	}
 
-	private void setFont(Font font) {
-		FontMetrics fm = panel.getFontMetrics(font);
-		panel.setFontMetrics(fm);
-		tool.setConfigChanged(true);
 	}
 
 	// Options.getStringEnum() is deprecated
@@ -206,48 +268,38 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 		HelpLocation help = new HelpLocation("ByteViewerPlugin", "Option");
 		opt.setOptionsHelpLocation(help);
 
-		opt.registerOption(OPTION_SEPARATOR_COLOR, DEFAULT_MISSING_VALUE_COLOR, help,
+		opt.registerThemeColorBinding(SEPARATOR_COLOR_OPTION_NAME, SEPARATOR_COLOR.getId(), help,
 			"Color used for separator shown between memory blocks.");
-		opt.registerOption(OPTION_SEPARATOR_COLOR, DEFAULT_MISSING_VALUE_COLOR, help,
-			"Color used for separator shown between memory blocks.");
-		opt.registerOption(OPTION_EDIT_COLOR, DEFAULT_EDIT_COLOR,
+
+		opt.registerThemeColorBinding(EDIT_TEXT_COLOR_OPTION_NAME, EDITED_TEXT_COLOR.getId(),
 			new HelpLocation("ByteViewerPlugin", "EditColor"),
-			"Color of cursor when the current view is in edit mode and can support editing.");
-		opt.registerOption(OPTION_CURRENT_VIEW_CURSOR_COLOR, DEFAULT_CURRENT_CURSOR_COLOR, help,
-			"Color of cursor when it is in the current view.");
-		opt.registerOption(OPTION_NONFOCUS_CURSOR_COLOR, DEFAULT_NONFOCUS_CURSOR_COLOR, help,
-			"Color of cursor when it is not the current view.");
-		opt.registerOption(OPTION_CURSOR_COLOR, DEFAULT_CURSOR_COLOR, help,
-			"Color of cursor for other views other than the current view.");
-		opt.registerOption(OPTION_FONT, DEFAULT_FONT, help, "Font used in the views.");
-		opt.registerOption(OPTION_CURRENT_LINE_COLOR, DEFAULT_CURSOR_LINE_COLOR, help,
-			"Color of the line containing the cursor");
-		opt.registerOption(OPTION_HIGHLIGHT_CURSOR_LINE, true, help,
-			"Toggles highlighting background color of line containing the cursor");
+			"Color of changed bytes when editing.");
 
-		Color missingValueColor = opt.getColor(OPTION_SEPARATOR_COLOR, DEFAULT_MISSING_VALUE_COLOR);
-		panel.setSeparatorColor(missingValueColor);
+		opt.registerThemeColorBinding(CURSOR_FOCUSED_COLOR_OPTION_NAME,
+			CURSOR_COLOR_FOCUSED_NON_EDIT.getId(),
+			help, "Color of cursor in the focused view.");
 
-		editColor = opt.getColor(OPTION_EDIT_COLOR, DEFAULT_EDIT_COLOR);
-		currentCursorColor =
-			opt.getColor(OPTION_CURRENT_VIEW_CURSOR_COLOR, DEFAULT_CURRENT_CURSOR_COLOR);
-		panel.setCurrentCursorColor(currentCursorColor);
+		opt.registerThemeColorBinding(CURSOR_UNFOCUSED_COLOR_OPTION_NAME,
+			CURSOR_COLOR_UNFOCUSED_NON_EDIT.getId(), help,
+			"Color of cursor in the unfocused views.");
 
-		Color nonFocusCursorColor =
-			opt.getColor(OPTION_NONFOCUS_CURSOR_COLOR, DEFAULT_NONFOCUS_CURSOR_COLOR);
-		panel.setNonFocusCursorColor(nonFocusCursorColor);
+		opt.registerThemeColorBinding(CURSOR_FOCUSED_EDIT_COLOR_OPTION_NAME,
+			CURSOR_COLOR_FOCUSED_EDIT.getId(), help,
+			"Color of the cursor in the focused view when editing.");
 
-		defaultCursorColor = opt.getColor(OPTION_CURSOR_COLOR, DEFAULT_CURSOR_COLOR);
-		panel.setCursorColor(defaultCursorColor);
+		opt.registerThemeColorBinding(CURSOR_UNFOCUSED_EDIT_COLOR_OPTION_NAME,
+			CURSOR_COLOR_UNFOCUSED_EDIT.getId(), help,
+			"Color of the cursor in the unfocused view when editing.");
 
-		Color cursorLineColor = opt.getColor(OPTION_CURRENT_LINE_COLOR, DEFAULT_CURSOR_LINE_COLOR);
-		panel.setCurrentCursorLineColor(cursorLineColor);
+		opt.registerThemeColorBinding(OPTION_HIGHLIGHT_MIDDLE_MOUSE_NAME,
+			HIGHLIGHT_MIDDLE_MOUSE_COLOR.getId(), help, "The middle-mouse highlight color.");
 
-		Font font =
-			SystemUtilities.adjustForFontSizeOverride(opt.getFont(OPTION_FONT, DEFAULT_FONT));
-		FontMetrics fm = panel.getFontMetrics(font);
+		opt.registerThemeFontBinding(OPTION_FONT, DEFAULT_FONT_ID, help, "Font used in the views.");
 
-		panel.restoreConfigState(fm, editColor);
+		boolean highlightCurrentLine = true;
+		opt.registerOption(OPTION_HIGHLIGHT_CURSOR_LINE, highlightCurrentLine, help,
+			"Toggles highlighting background color of line containing the cursor.");
+		panel.setHighlightCurrentLineEnabled(highlightCurrentLine);
 
 		opt.addOptionsChangeListener(this);
 
@@ -257,102 +309,172 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 			CURSOR_HIGHLIGHT_BUTTON_NAME, GhidraOptions.CURSOR_MOUSE_BUTTON_NAMES.MIDDLE);
 		panel.setHighlightButton(mouseButton.getMouseEventID());
 
-		panel.setMouseButtonHighlightColor(opt.getColor(HIGHLIGHT_COLOR_NAME, Color.YELLOW));
-
 		opt.addOptionsChangeListener(this);
 	}
 
 	/**
-	 * Set the offset that is applied to each block.
+	 * Set the display offset that is applied to bytes in each block.
+	 * <p>
+	 * Changing this adjusts which byte appears first on each line of the grid.
+	 * 
+	 * @param newOffset the new block offset (0..bytesPerLine-1)
 	 */
-	void setBlockOffset(int blockOffset) {
-		if (blockOffset == offset) {
-			return;
+	public void setOffset(int newOffset) {
+		if (configOptions.calcNormalizedOffset(newOffset) != configOptions.getOffset()) {
+			configOptions.setOffset(newOffset);
+			ViewerPosition vp = panel.getViewerPosition();
+			panel.updateLayoutConfigOptions(configOptions);
+			tool.setConfigChanged(true);
+			panel.setViewerPosition(vp);
 		}
-		int newOffset = blockOffset;
-		if (newOffset > bytesPerLine) {
-			newOffset = newOffset % bytesPerLine;
-		}
-		this.offset = newOffset;
-		panel.setOffset(newOffset);
-		tool.setConfigChanged(true);
+	}
+
+	void adjustOffset(int delta) {
+		setOffset(configOptions.getOffset() + delta);
 	}
 
 	ByteBlockInfo getCursorLocation() {
 		return panel.getCursorLocation();
 	}
 
-	ByteBlockSelection getBlockSelection() {
-		return panel.getViewerSelection();
-	}
-
-	void setBlockSelection(ByteBlockSelection selection) {
-		panel.setViewerSelection(selection);
-	}
-
 	ByteBlockSet getByteBlockSet() {
 		return blockSet;
 	}
 
-	/**
-	 * Get the number of bytes displayed in a line.
-	 */
-	int getBytesPerLine() {
-		return bytesPerLine;
+	public ByteViewerConfigOptions getConfigOptions() {
+		return configOptions;
 	}
 
-	/**
-	 * Get the offset that should be applied to each byte block.
-	 */
-	int getOffset() {
-		return offset;
-	}
+	public void updateConfigOptions(ByteViewerConfigOptions newOptions, Set<String> selectedViews) {
 
-	Color getCursorColor() {
-		return defaultCursorColor;
-	}
+		boolean changed = removeDeletedViews(selectedViews);
+		if (!configOptions.areOptionsEqual(newOptions)) {
+			changed = true;
 
-	int getGroupSize() {
-		return hexGroupSize;
-	}
+			boolean layoutChanged = configOptions.areLayoutParamsChanged(newOptions);
+			boolean widthsChanged = configOptions.areDislayWidthsChanged(newOptions);
 
-	void setGroupSize(int groupSize) {
-		if (groupSize == hexGroupSize) {
-			return;
-		}
-		hexGroupSize = groupSize;
-		ByteViewerComponent component = viewMap.get(HexFormatModel.NAME);
-		if (component != null) {
-			component.setGroupSize(groupSize);
-			component.invalidate();
+			configOptions = newOptions;
+
+			for (ByteViewerComponent bvc : viewMap.values()) {
+				bvc.getDataModel().setByteViewerConfigOptions(configOptions);
+				bvc.invalidateModelFields();
+			}
+
+			if (layoutChanged || widthsChanged) {
+				panel.updateLayoutConfigOptions(configOptions);
+			}
+			if (widthsChanged) {
+				panel.resetColumnsToDefaultWidths();
+			}
+			panel.invalidate();
+			panel.validate();
 			panel.repaint();
 		}
-		tool.setConfigChanged(true);
-	}
 
-	void setBytesPerLine(int bytesPerLine) {
-		if (this.bytesPerLine != bytesPerLine) {
-			this.bytesPerLine = bytesPerLine;
-			panel.setBytesPerLine(bytesPerLine);
+		changed |= addNewViews(selectedViews);
+
+		if (changed) {
+			refreshView();
 			tool.setConfigChanged(true);
 		}
 	}
 
-	void writeConfigState(SaveState saveState) {
-		DataModelInfo info = panel.getDataModelInfo();
-		saveState.putStrings(VIEW_NAMES, info.getNames());
-		saveState.putInt(HEX_VIEW_GROUPSIZE, hexGroupSize);
-		saveState.putInt(BYTES_PER_LINE_NAME, bytesPerLine);
-		saveState.putInt(OFFSET_NAME, offset);
+	private boolean removeDeletedViews(Set<String> selectedViews) {
+		if (selectedViews == null) {
+			return false;
+		}
+		boolean changed = false;
+		for (String viewName : getCurrentViews()) {
+			if (!selectedViews.contains(viewName)) {
+				removeView(viewName, true);
+				changed = true;
+			}
+		}
+		return changed;
 	}
 
-	void readConfigState(SaveState saveState) {
+	private boolean addNewViews(Set<String> selectedViews) {
+		if (selectedViews == null) {
+			return false;
+		}
+		boolean changed = false;
+		Set<String> currentViews = getCurrentViews();
+
+		// add any missing views
+		for (String viewName : selectedViews) {
+			if (!currentViews.contains(viewName)) {
+				addView(viewName);
+				changed = true;
+			}
+		}
+		return changed;
+	}
+
+	private void updateModelConfig(String modelName) {
+		ByteViewerComponent bvc = viewMap.get(modelName);
+		if (bvc != null) {
+			bvc.getDataModel().setByteViewerConfigOptions(configOptions);
+			bvc.invalidateModelFields();
+			panel.repaint();
+		}
+	}
+
+	public void setCharsetInfo(CharsetInfo newCSI) {
+		CharsetInfo oldCSI = configOptions.getCharsetInfo();
+		if (!oldCSI.equals(newCSI)) {
+			configOptions.setCharsetInfo(newCSI);
+			// we know only Chars format cares about this setting
+			updateModelConfig(CharacterFormatModel.NAME);
+			if (oldCSI.getAlignment() != newCSI.getAlignment()) {
+				panel.resetColumnsToDefaultWidths();
+			}
+			tool.setConfigChanged(true);
+		}
+	}
+
+	public void setCompactChars(boolean newCompactChars) {
+		if (configOptions.isCompactChars() != newCompactChars) {
+			configOptions.setCompactChars(newCompactChars);
+			// we know only Chars format cares about this setting, and that it will change column width
+			updateModelConfig(CharacterFormatModel.NAME);
+			panel.resetColumnsToDefaultWidths();
+			tool.setConfigChanged(true);
+		}
+	}
+
+	protected void writeConfigState(SaveState saveState) {
+		List<String> viewNames = panel.getViewNamesInDisplayOrder();
+		saveState.putStrings(VIEW_NAMES, viewNames.toArray(new String[viewNames.size()]));
+		configOptions.write(saveState);
+		SaveState columnState = new SaveState(VIEW_WIDTHS);
+		int indexWidth = panel.getViewWidth(INDEX_COLUMN_NAME);
+		columnState.putInt(INDEX_COLUMN_NAME, indexWidth);
+		for (String viewName : viewNames) {
+			int width = panel.getViewWidth(viewName);
+			columnState.putInt(viewName, width);
+		}
+		saveState.putSaveState(VIEW_WIDTHS, columnState);
+	}
+
+	protected void readConfigState(SaveState saveState) {
+		configOptions.read(saveState);
+
 		String[] names = saveState.getStrings(VIEW_NAMES, new String[0]);
-		hexGroupSize = saveState.getInt(HEX_VIEW_GROUPSIZE, 1);
 		restoreViews(names, false);
-		bytesPerLine = saveState.getInt(BYTES_PER_LINE_NAME, DEFAULT_BYTES_PER_LINE);
-		offset = saveState.getInt(OFFSET_NAME, 0);
-		panel.restoreConfigState(bytesPerLine, offset);
+
+		panel.restoreConfigState(configOptions);
+
+		SaveState viewWidths = saveState.getSaveState(VIEW_WIDTHS);
+		if (viewWidths != null) {
+			String[] viewNames = viewWidths.getNames();
+			for (String viewName : viewNames) {
+				int width = viewWidths.getInt(viewName, 0);
+				if (width > 0) {
+					panel.setViewWidth(viewName, width);
+				}
+			}
+		}
 	}
 
 	/**
@@ -360,7 +482,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	 */
 	private void restoreViews(String[] viewNames, boolean updateViewPosition) {
 		// clear existing views
-		for (String viewName : viewMap.keySet()) {
+		for (String viewName : List.copyOf(viewMap.keySet())) {
 			removeView(viewName, false);
 		}
 		for (String viewName : viewNames) {
@@ -384,13 +506,10 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	private ByteViewerComponent addView(DataFormatModel model, boolean configChanged,
 			boolean updateViewPosition) {
 
-		if (model.getName().equals(HexFormatModel.NAME)) {
-			model.setGroupSize(hexGroupSize);
-		}
+		model.setByteViewerConfigOptions(configOptions);
 
 		String viewName = model.getName();
-		ByteViewerComponent bvc =
-			panel.addView(viewName, model, editModeAction.isSelected(), updateViewPosition);
+		ByteViewerComponent bvc = panel.addView(viewName, model, updateViewPosition);
 		viewMap.put(viewName, bvc);
 		if (configChanged) {
 			tool.setConfigChanged(true);
@@ -404,6 +523,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 		if (bvc == null) {
 			return;
 		}
+
 		panel.removeView(bvc);
 
 		if (configChanged) {
@@ -412,14 +532,20 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	}
 
-	abstract void updateLocation(ByteBlock block, BigInteger blockOffset, int column,
+	protected abstract void updateLocation(ByteBlock block, BigInteger blockOffset, int column,
 			boolean export);
 
-	abstract void updateSelection(ByteBlockSelection selection);
+	protected abstract void updateSelection(ByteBlockSelection selection);
+
+	protected abstract void updateLiveSelection(ByteViewerComponent bvc,
+			ByteBlockSelection selection);
 
 	void dispose() {
+		tool.removePopupActionProvider(this);
 		updateManager.dispose();
 		updateManager = null;
+
+		panel.dispose();
 
 		if (blockSet != null) {
 			blockSet.dispose();
@@ -429,9 +555,7 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	}
 
 	public Set<String> getCurrentViews() {
-		DataModelInfo info = panel.getDataModelInfo();
-		HashSet<String> currentViewNames = new HashSet<>(Arrays.asList(info.getNames()));
-		return currentViewNames;
+		return new HashSet<String>(panel.getViewNamesInDisplayOrder());
 	}
 
 	private void refreshView() {
@@ -445,13 +569,13 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 
 	}
 
-	ByteViewerPanel getByteViewerPanel() {
+	protected ByteViewerPanel getByteViewerPanel() {
 		return panel;
 	}
 
 	/**
 	 * Set the status info on the tool.
-	 * 
+	 *
 	 * @param message non-html text to display
 	 */
 	void setStatusMessage(String message) {
@@ -475,13 +599,19 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 		return names;
 	}
 
+	/**
+	 * Factory, creates instances of DataFormatModel.
+	 * 
+	 * @param formatName name
+	 * @return new instance of the requested DataFormatModel
+	 */
 	public DataFormatModel getDataFormatModel(String formatName) {
 		Class<? extends DataFormatModel> classy = dataFormatModelClassMap.get(formatName);
 		if (classy == null) {
 			return null;
 		}
 		try {
-			return classy.newInstance();
+			return classy.getConstructor().newInstance();
 		}
 		catch (Exception e) {
 			// cannot happen, since we only get the value from valid class that we put into the map
@@ -493,4 +623,23 @@ public abstract class ByteViewerComponentProvider extends ComponentProviderAdapt
 	public MarkerService getMarkerService() {
 		return tool.getService(MarkerService.class);
 	}
+
+	/**
+	 * Add the {@link AddressSetDisplayListener} to the byte viewer panel
+	 *
+	 * @param listener the listener to add
+	 */
+	public void addDisplayListener(AddressSetDisplayListener listener) {
+		panel.addDisplayListener(listener);
+	}
+
+	/**
+	 * Remove the {@link AddressSetDisplayListener} from the byte viewer panel
+	 *
+	 * @param listener the listener to remove
+	 */
+	public void removeDisplayListener(AddressSetDisplayListener listener) {
+		panel.removeDisplayListener(listener);
+	}
+
 }
