@@ -1,13 +1,12 @@
 /* ###
  * IP: GHIDRA
- * REVIEWED: YES
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,6 +15,11 @@
  */
 package ghidra.program.database.oldfunction;
 
+import java.io.IOException;
+import java.util.*;
+
+import db.DBRecord;
+import db.Field;
 import ghidra.program.model.address.AddressOutOfBoundsException;
 import ghidra.program.model.data.DataType;
 import ghidra.program.model.listing.*;
@@ -23,14 +27,6 @@ import ghidra.program.model.symbol.SourceType;
 import ghidra.util.Msg;
 import ghidra.util.exception.InvalidInputException;
 
-import java.io.IOException;
-import java.util.*;
-
-import db.Record;
-
-/**
- * 
- */
 class OldStackFrameDB implements StackFrame {
 
 	private int localSize;      // if local size == 0, size is longest defined local
@@ -89,9 +85,9 @@ class OldStackFrameDB implements StackFrame {
 			return;
 		try {
 			variables = new ArrayList<Variable>();
-			long[] keys = adapter.getStackVariableKeys(function.getKey());
+			Field[] keys = adapter.getStackVariableKeys(function.getKey());
 			for (int i = 0; i < keys.length; i++) {
-				Record varRec = adapter.getStackVariableRecord(keys[i]);
+				DBRecord varRec = adapter.getStackVariableRecord(keys[i].getLongValue());
 				variables.add(getStackVariable(varRec));
 			}
 			Collections.sort(variables, StackVariableComparator.get());
@@ -101,7 +97,7 @@ class OldStackFrameDB implements StackFrame {
 		}
 	}
 
-	private Variable getStackVariable(Record record) {
+	private Variable getStackVariable(DBRecord record) {
 
 		int offset = record.getIntValue(OldStackVariableDBAdapter.STACK_VAR_OFFSET_COL);
 		long dataTypeId = record.getLongValue(OldStackVariableDBAdapter.STACK_VAR_DATA_TYPE_ID_COL);
@@ -124,13 +120,11 @@ class OldStackFrameDB implements StackFrame {
 			throw new RuntimeException(e); // unexpected
 		}
 		catch (AddressOutOfBoundsException e) {
-			Msg.error(this,
-				"Invalid stack variable '" + name + "' in function at " + function.getEntryPoint() +
-					": " + e.getMessage());
+			Msg.error(this, "Invalid stack variable '" + name + "' in function at " +
+				function.getEntryPoint() + ": " + e.getMessage());
 			try {
-				var =
-					new LocalVariableImpl(name, 0, dataType, VariableStorage.BAD_STORAGE,
-						functionManager.getProgram());
+				var = new LocalVariableImpl(name, 0, dataType, VariableStorage.BAD_STORAGE,
+					functionManager.getProgram());
 			}
 			catch (InvalidInputException e1) {
 				throw new RuntimeException(e); // unexpected
@@ -302,7 +296,7 @@ class OldStackFrameDB implements StackFrame {
 
 				// find the first stack variable defined at or after 0
 				loadStackVariables();
-				Object key = new Integer(0);
+				Object key = Integer.valueOf(0);
 				int loc = Collections.binarySearch(variables, key, StackVariableComparator.get());
 				loc = (loc < 0 ? -1 - loc : loc);
 				if (loc < variables.size()) {
@@ -348,7 +342,7 @@ class OldStackFrameDB implements StackFrame {
 	public Variable getVariableContaining(int offset) {
 		synchronized (function) {
 			loadStackVariables();
-			Object key = new Integer(offset);
+			Object key = Integer.valueOf(offset);
 			int index = Collections.binarySearch(variables, key, StackVariableComparator.get());
 			if (index >= 0) {
 				return variables.get(index);
